fixed: error messages were too long, styled select

--- a/html/Floma/public/css/back.css
+++ b/html/Floma/public/css/back.css
@@ -258,11 +258,19 @@ label {
   color: var(--black-color);
 }
 
-input {
+input,
+select {
   width: 18.75rem;
   padding: 0.5em;
   border-radius: 6px;
   border: 1px solid var(--light-grey-color);
+}
+
+select {
+  font-family: var(--noto);
+  font-size: var(--text-size);
+  background: var(--white-color);
+  color: var(--black-color);
 }
 
 input::placeholder {
